fix(ci): pin activesupport version

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - pushd mlr-5.4.0 && ./configure --prefix=/usr && make && sudo make install && popd
 
 install:
+  - gem install activesupport -v 5.2.3
   - gem install csvlint
 
 script:
