--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ dist: bionic
 rvm:
   - 2.4
 
+cache:
+    directories:
+     - /home/travis/.rvm/
+     
 # addons:
 #   apt:
 #     packages:
@@ -11,11 +15,11 @@ rvm:
 notifications:
   email: false
 
-# miller on ubuntu bionic is 5.3 we need 5.4
+# miller on ubuntu bionic is 5.3 we need >5.4
 before_install:
-  - wget https://github.com/johnkerl/miller/releases/download/5.4.0/mlr-5.4.0.tar.gz
-  - tar -xzvf mlr-5.4.0.tar.gz
-  - pushd mlr-5.4.0 && ./configure --prefix=/usr && make && sudo make install && popd
+  - wget https://github.com/johnkerl/miller/releases/download/v5.7.0/mlr-5.7.0.tar.gz
+  - tar -xzvf mlr-5.7.0.tar.gz
+  - pushd mlr-5.7.0 && ./configure --prefix=/usr && make && sudo make install && popd
   - gem install activesupport -v 5.2.3
   - gem install csvlint
   - npm i -g bats
