--- a/.travis.yml
+++ b/.travis.yml
@@ -27,22 +27,23 @@ install:
 script:
   # validate each file against its schema
   # - for FILE in data/*csv; do csvlint --schema=schema.json $FILE; done
-  - csvlint data/Act.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Act.json
-  - csvlint data/ActType.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/ActType.json
-  - csvlint data/ArtForm.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/ArtForm.json
-  - csvlint data/ArtWork.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/ArtWork.json
-  - csvlint data/Genre.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Genre.json
-  - csvlint data/Institution.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Institution.json
-  - csvlint data/IsoLangCode.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/IsoLangCode.json
-  - csvlint data/Location.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Location.json
-  - csvlint data/Membership.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Membership.json
-  - csvlint data/Person.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Person.json
-  - csvlint data/Place.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Place.json
-  - csvlint data/PrimarySource.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/PrimarySource.json
-  - csvlint data/Quotation.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/Quotation.json
-  - csvlint data/SecondarySource.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/SecondarySource.json
-  - csvlint data/SocialPosition.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/SocialPosition.json
-  - csvlint data/SocialRelation.csv --schema=https://raw.githubusercontent.com/readchina/csv-schema/master/readingdata/SocialRelation.json
+  - csvlint csv/data/Act.csv --schema=csv/schema/Act.json
+  - csvlint csv/data/ActType.csv --schema=csv/schema/ActType.json
+  - csvlint csv/data/ArtForm.csv --schema=csv/schema/ArtForm.json
+  - csvlint csv/data/ArtWork.csv --schema=csv/schema/ArtWork.json
+  - csvlint csv/data/Genre.csv --schema=csv/schema/Genre.json
+  - csvlint csv/data/Institution.csv --schema=csv/schema/Institution.json
+  - csvlint csv/data/IsoLangCode.csv --schema=csv/schema/IsoLangCode.json
+  - csvlint csv/data/Location.csv --schema=csv/schema/Location.json
+  - csvlint csv/data/Membership.csv --schema=csv/schema/Membership.json
+  - csvlint csv/data/Person.csv --schema=csv/schema/Person.json
+  - csvlint csv/data/Place.csv --schema=csv/schema/Place.json
+  - csvlint csv/data/PrimarySource.csv --schema=csv/schema/PrimarySource.json
+  - csvlint csv/data/Quotation.csv --schema=csv/schema/Quotation.json
+  - csvlint csv/data/SecondarySource.csv --schema=csv/schema/SecondarySource.json
+  - csvlint csv/data/SocialPosition.csv --schema=csv/schema/SocialPosition.json
+  - csvlint csv/data/SocialRelation.csv --schema=csv/schema/SocialRelation.json
+  - csvlint csv/data/Work.csv --schema=csv/schema/Work.json
 
 # referential integrity checks
   - bats --tap test/*.bats
