--- a/.travis.yml
+++ b/.travis.yml
@@ -35,15 +35,14 @@ script:
   - csvlint csv/data/Genre.csv --schema=csv/schema/Genre.json
   - csvlint csv/data/Institution.csv --schema=csv/schema/Institution.json
   - csvlint csv/data/IsoLangCode.csv --schema=csv/schema/IsoLangCode.json
-  - csvlint csv/data/Location.csv --schema=csv/schema/Location.json
   - csvlint csv/data/Membership.csv --schema=csv/schema/Membership.json
   - csvlint csv/data/Person.csv --schema=csv/schema/Person.json
-  - csvlint csv/data/Place.csv --schema=csv/schema/Place.json
   - csvlint csv/data/PrimarySource.csv --schema=csv/schema/PrimarySource.json
   - csvlint csv/data/Quotation.csv --schema=csv/schema/Quotation.json
   - csvlint csv/data/SecondarySource.csv --schema=csv/schema/SecondarySource.json
   - csvlint csv/data/SocialPosition.csv --schema=csv/schema/SocialPosition.json
   - csvlint csv/data/SocialRelation.csv --schema=csv/schema/SocialRelation.json
+  - csvlint csv/data/Space.csv --schema=csv/schema/Space.json
   - csvlint csv/data/Work.csv --schema=csv/schema/Work.json
 
 # referential integrity checks
