--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ script:
 after_success:
   - textql -output-header -output-file csv/views/view01a_txt-titles.csv -header -sql "select distinct a.act_id, a.act_object, ps.title from Act a, PrimarySource ps inner join PrimarySource on a.act_object = ps.prim_source_id  where ps.title_lang = a.id_lang and a.act_object!='W0414'" csv/data/
   - textql -output-header -output-file csv/views/view01b_art-titles.csv -header -sql "select distinct a.act_id, a.act_object, aw.title from Act a, ArtWork aw inner join ArtWork on a.act_object = aw.artwork_id  where aw.title_lang = a.id_lang and a.act_object!='W0554'" csv/data/
-  - textql -output-header -output-file csv/views/view02a_creator-matrix.csv -header -sql "select distinct a.act_id, a.agent, a.act_object,  p.family_name, p.first_name from Act a, Person p inner join Person on a.agent = p.person_id  where p.name_lang = a.id_lang and a.agent!='AG0626'" csv/data/
-  # no Inst acts ??
+  - textql -output-header -output-file csv/views/view02b_creator-matrix.csv -header -sql "select distinct a.act_id, a.act_object, w.creator, (select distinct ps.title from PrimarySource ps where a.act_object = ps.prim_source_id) as title, (select distinct coalesce(p.family_name, '') || ' ' || coalesce(p.first_name, '') from Person p where w.creator = p.person_id) as name from Act a, Work w inner join Work on a.act_object = w.work_id where w.language = a.id_lang and a.act_object!='W0414'" csv/data/
+
+  # - textql -output-header -output-file csv/views/view02a_creator-matrix.csv -header -sql "select distinct a.act_id, a.agent, a.act_object,  coalesce(p.family_name, '') || ' ' || coalesce(p.first_name, '') as name from Act a, Person p inner join Person on a.agent = p.person_id  where p.name_lang = a.id_lang and a.agent!='AG0626'" csv/data/
+  # no Inst acts, yet?
   # - textql -output-file csv/views/view02b_creator-matrix.csv -header -sql "select distinct a.act_id, a.agent, i.inst_name from Act a, Institution i inner join Institution on a.agent = i.inst_id where i.inst_name_lang = a.id_lang" csv/data/*.csv
