--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,6 @@ before_script:
   - basex xml/modules/tei-place.xq > xml/listPlace.xml
   - basex xml/modules/tei-relation.xq > xml/listRelation.xml
   - basex xml/modules/social-network.xq > xml/rActs.gexf
-  # 439 test
-  - basex xml/modules/rAct-vega-test.xq > csv/views/view04a_rActs-test.json
   # expand xincludes
   - xmllint --output xml/expand/expand.xml --xinclude xml/tei_header.xml
 
@@ -55,11 +53,6 @@ script:
   # - bats --tap test/*.bats
   - jing xml/schema/tei_all.rng xml/expand/expand.xml
   - jing xml/schema/gexf.rng xml/rActs.gexf
-  # 439 test
-  # - python -mjson.tool csv/views/view04a_rActs.json
-  - python -mjson.tool csv/views/view04a_rActs-test.json
-
-
 
 after_success:
   # Generate view tables
@@ -68,4 +61,4 @@ after_success:
   - textql -output-header -output-file csv/views/view02_creator-matrix.csv -header -sql "select distinct a.act_id, a.act_object, w.creator, (select distinct ps.title from PrimarySource ps where a.act_object = ps.prim_source_id) as title, (select distinct coalesce(p.family_name, '') || ' ' || coalesce(p.first_name, '') from Person p where w.creator = p.person_id) as name from Act a, Work w inner join Work on a.act_object = w.work_id where a.act_object!='W0414'" csv/data/
   - textql -output-header -output-file csv/views/view03a_reader-author-nodes.csv -header -sql "select distinct a.agent_id as node_id from Agent a" csv/data/
   - textql -output-header -output-file csv/views/view03b_reader-author-edges.csv -header -sql "select distinct a.act_id, a.agent as source, w.creator as target from Act a, Work w inner join Work on a.act_object = w.work_id" csv/data/
-  # - basex xml/modules/rAct-vega.xq > csv/views/view04a_rActs.json
+  - basex xml/modules/rAct-vega.xq > csv/views/view04a_rActs.json
