feat(tei): update TEI 4.4.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           path: xml  
       - name: Display Downloaded Artifacts
         run: ls -R
+      - name: Display xmllint version
+        run: xmllint --version 
       - name: Validate XML Files
         run: | 
           xmllint --noout --xinclude --relaxng xml/schema/tei_all.rng xml/tei_header.xml  
