--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,8 @@ jobs:
             ${{ runner.os }}-pip-        
       - name: Install Test Dependencies
         run: | 
-          sudo apt-get update && sudo apt-get install -y libxml2-utils 
+          sudo apt-get update 
+          sudo apt-get install -y libxml2-utils 
           pip install frictionless csvkit
       - name: Validate CSV Files
         working-directory: csv
