--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,30 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3        
       - name: Install Build Dependencies
-        run: sudo apt-get install -y basex
-      - name: Generate XML Files
-        run: |
-          basex xml/modules/tei-bibl.xq > xml/listBibl.xml
-          basex xml/modules/tei-org.xq > xml/listOrg.xml
-          basex xml/modules/tei-person.xq > xml/listPerson.xml
-          basex xml/modules/tei-place.xq > xml/listPlace.xml
-          basex xml/modules/tei-relation.xq > xml/listRelation.xml
-          basex xml/modules/social-network.xq > xml/rActs.gexf
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v3
-        with:
-          name: markup-xi
-          path: |
-            xml/*.xml
-            xml/*.gexf  
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 1    
+        run: | 
+          sudo apt-get update 
+          sudo apt-get install -y basex libxml2-utils 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -45,32 +24,87 @@ jobs:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-        
-      - name: Install Test Dependencies
-        run: | 
-          sudo apt-get update 
-          sudo apt-get install -y libxml2-utils 
-          pip install frictionless csvkit
-      - name: Validate CSV Files
+            ${{ runner.os }}-pip-
+      - name: Install Python tools
+        run: pip install ReadActor frictionless csvkit      
+      - name: Validate input CSV Files
         working-directory: csv
-        run: frictionless validate datapackage.json    
-      - name: Download Artifact
-        uses: actions/download-artifact@v3
+        run: frictionless validate datapackage.json        
+      - name: Update Space
+        working-directory: csv/data/
+        run: readactor Space.csv
+      - name: Update Person
+        working-directory: csv/data/
+        run: readactor Person.csv
+      - name: Update Institution
+        working-directory: csv/data/
+        run: readactor Institution.csv
+      - name: Validate Ouput CSV Files
+        working-directory: csv
+        run: frictionless validate datapackage.json           
+      - name: Generate XML Files\
+        run: |
+          basex xml/modules/tei-bibl.xq > xml/listBibl.xml
+          basex xml/modules/tei-org.xq > xml/listOrg.xml
+          basex xml/modules/tei-person.xq > xml/listPerson.xml
+          basex xml/modules/tei-place.xq > xml/listPlace.xml
+          basex xml/modules/tei-relation.xq > xml/listRelation.xml
+          basex xml/modules/social-network.xq > xml/rActs.gexf
+      - name: Validate XML Files
+        run: | 
+          xmllint --noout --xinclude --relaxng xml/schema/tei_all.rng xml/tei_header.xml  
+          xmllint --noout --relaxng xml/schema/gexf.rng xml/rActs.gexf        
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
         with:
           name: markup-xi
-          path: xml  
+          path: |
+            xml/*.xml
+            xml/*.gexf  
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 1    
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.9'
+  #     - name: Use pip Cache  
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: ~/.cache/pip
+  #         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-pip-        
+  #     - name: Install Test Dependencies
+  #       run: | 
+  #         sudo apt-get update 
+  #         sudo apt-get install -y libxml2-utils 
+  #         pip install frictionless csvkit
+  #     - name: Validate output CSV Files
+  #       working-directory: csv
+  #       run: frictionless validate datapackage.json    
+  #     - name: Download Artifact
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: markup-xi
+  #         path: xml  
       # (DP) for debugging
       # - name: Display Downloaded Artifacts
       #   run: ls -R
       # - name: Display xmllint version
       #   run: xmllint --version 
-      - name: Validate XML Files
-        run: | 
-          xmllint --noout --xinclude --relaxng xml/schema/tei_all.rng xml/tei_header.xml  
-          xmllint --noout --relaxng xml/schema/gexf.rng xml/rActs.gexf         
+      # - name: Validate XML Files
+      #   run: | 
+      #     xmllint --noout --xinclude --relaxng xml/schema/tei_all.rng xml/tei_header.xml  
+      #     xmllint --noout --relaxng xml/schema/gexf.rng xml/rActs.gexf         
   release:
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
