--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      - name: Install Python dependencies
+        run: python -m pip install --upgrade pip pandas
       - name: Use pip Cache  
         uses: actions/cache@v2
         with:
