--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,20 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - name: Install Python dependencies
-        run: python -m pip install --upgrade pip
+          check-latest: true
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"    
       - name: Use pip Cache  
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-    
+      # - name: Install Python dependencies
+      #   run: python -m pip install --upgrade pip
       - name: Install Python tools
         run: pip install ReadActor pandas frictionless csvkit    
       - name: Validate input CSV Files
